# horde

./: .gitignore  CMakeLists.txt  build.sh  generateFlatBuffers.bat  main.cpp
assets/models/: playerCharacter.glb
assets/navmesh/: test.navmesh
assets/shaders/: base.frag  base.fs  instanced_test.vert
core/: Components.h  Scene.cpp  Scene.h  defines.h  raylibEx.cpp  raylibEx.h
core/components/: AbilitySystemComponent.cpp  AbilitySystemComponent.h  Animation.h  Attribute.h  Camera.cpp  Camera.h  CharacterAnimation.h  Components.h  Enemy.h  Follow.h  FollowComponent.h  Lifetime.cpp  Lifetime.h  Model.cpp  Model.h  Network.h  Particle.h  Physics.h  Projectile.h  Ray.h  RayCollision.h  Rectangle.cpp  Rectangle.h  Shapes.h  SpawnerComponent.h  TechXComponent.h  Transform.cpp  Transform.h
core/navigation/: Navigation.cpp  Navigation.h
core/primitives/: Color.cpp  Color.h  Material.h  Mesh.cpp  Mesh.h  Model.h  Polygon.h  Ray.h  Texture2D.cpp  Texture2D.h  Triangles.h
core/systems/: AnimationSystem.cpp  AnimationSystem.h  AttributeSystem.cpp  AttributeSystem.h  EnemySystem.cpp  EnemySystem.h  FollowSystem.cpp  FollowSystem.h  ModelDrawingSystem.cpp  ModelDrawingSystem.h  NavigationSystem.cpp  NavigationSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ShapeDrawingSystem.cpp  ShapeDrawingSystem.h  SpawnSystem.h  System.h
core/ui/: Button.h  Canvas.cpp  Canvas.h  Element.h  GUIElement.cpp  GUIElement.h  GUIManager.cpp  GUIManager.h  GUIScreen.cpp  GUIScreen.h  RLGameGui.h  RootElement.cpp  RootElement.h  StandardElements.cpp  StandardElements.h
core/util/: Util.cpp  Util.h  raymathEx.h
game/: Game.cpp  Game.h  MainScene.cpp  MainScene.h  Particles.h  Player.cpp  Player.h  SmartEntity.cpp  SmartEntity.h
game/abilities/: Projectile.h
game/components/: Animation.h  Attribute.h  CAnimation.h  CAttribute.h  CCamera.cpp  CCamera.h  CCharacterAnimation.h  CEnemy.h  CFollow.h  CLifetime.cpp  CLifetime.h  CMetaData.cpp  CMetaData.h  CModel.cpp  CModel.h  CNetwork.h  CParticle.h  CPhysics.cpp  CPhysics.h  CProjectile.cpp  CProjectile.h  CRay.cpp  CRay.h  CRectangle.cpp  CRectangle.h  CShapes.cpp  CShapes.h  CSpawner.cpp  CSpawner.h  CTransform.cpp  CTransform.h  Camera.cpp  Camera.h  CharacterAnimation.h  Enemy.h  Follow.h  Lifetime.cpp  Lifetime.h  Model.h  Mortal.cpp  (+20 more)
game/enums/: EnumTest.cpp  EnumTest.h
game/factories/: EnemyBuilder.cpp  EnemyBuilder.h  Factory.cpp  Factory.h  PlayerBuilder.cpp  PlayerBuilder.h
game/gamecomponents/: EnemyComponent.h
game/gamesystems/: EnemySystem.cpp  EnemySystem.h
game/graphics/: Texture2D.cpp  Texture2D.h
game/navigation/: Navigation.cpp  (+1 more)
idl/: Events.fbs
scripts/: generateFlatBuffers.sh
test/: example.cpp
(+187 files in other folders)
